# MyToolbox

./: .gitignore  checklist.md  index.html  package-lock.json  package.json  spec.md  tasks.md
skills/: tauri-build.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/Editor/: MonacoWrapper.tsx
src/components/Layout/: Sidebar.tsx  index.tsx
src/components/UpdateAlert/: index.tsx
src/hooks/: useSettings.ts
src/pages/CaseTool/: index.tsx
src/pages/ConverterTool/: index.tsx
src/pages/DiffTool/: index.tsx
src/pages/ExcelTool/: index.tsx
src/pages/Home/: index.tsx
src/pages/JsonTool/: index.tsx
src/pages/MarkdownTool/: index.tsx
src/pages/PlaceholderTool/: index.tsx
src/pages/PromptOptimizer/: index.tsx
src/pages/Settings/: index.tsx
src/pages/SqlTool/: index.tsx
src/services/: llm.ts  version.ts
src/types/: index.ts  json.d.ts
