[package]
name = "cjie-toolbox"
version = "0.3.0"
description = "A developer toolbox for Mac"
authors = ["you"]
edition = "2021"

[lib]
name = "cjie_toolbox_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
